# aws-auth-command

./: .npmignore  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  package.json
.github/workflows/: release.yml
Formula/: awx.rb
docs/: README.ja.md
docs/prd/: command.md  init.md
scripts/: install.js  package-release.sh  postinstall.js
src/: main.rs  tests.rs
